<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="title_name">音乐播放器</string>
    <string name="permission_title">权限申请</string>
    <string name="permission_content">请允许访问权限，以便音乐播放器访问存储空间</string>
    <string name="favorites">收藏</string>
    <string name="songs">歌曲</string>
    <string name="artist">艺术家</string>
    <string name="album">专辑</string>
    <string name="bottom_music_default_text">没有播放</string>
    <string name="default_time">00:00</string>
    <string name="add_favorite">添加到收藏</string>
    <string name="remove_from_list">从库中移除</string>
    <string name="remove_favorite">从收藏中移除</string>
    <string name="add_favorite_success">已添加到收藏</string>
    <string name="remove_favorite_success">已从收藏中移除</string>
    <string name="no_favorite">没有收藏的文件</string>
    <string name="no_songs">没有歌曲文件</string>
    <string name="loading">加载中,请稍后&#8230;</string>
    <string name="timer_title">定时停止播放</string>
    <string name="timer_no">不开启</string>
    <string name="timer_time_1">10分钟后</string>
    <string name="timer_time_2">20分钟后</string>
    <string name="timer_time_3">30分钟后</string>
    <string name="timer_time_4">45分钟后</string>
    <string name="timer_time_5">60分钟后</string>
    <string name="timer_time_customer">自定义</string>
    <string name="timer_play_until_finish">计时结束后播放完当前歌曲再停止</string>
    <string name="play_in_order">已切换到顺序播放</string>
    <string name="play_single_cycle">已切换到单曲循环</string>
    <string name="play_random">已切换到随机播放</string>
    <string name="delete_from_device">从设备中删除</string>
    <string name="cancel">取消</string>
    <string name="delete">移除</string>
    <string name="delete_success">已从库中移除</string>
    <string name="no_lyrics_file">没有歌词文件</string>
    <string name="scan_local_music">扫描本地音乐</string>
    <string name="timer_to_stop">定时停止播放</string>
    <string name="exit_app">退出</string>
    <string name="scan_music">扫描歌曲</string>
    <string name="scan_filter_time">大小过滤</string>
    <string name="scan_filter_dir">目录过滤</string>
    <string name="scan_filter_less_60s">跳过小于60秒的音乐</string>
    <string name="scan_filter_less_500k">跳过小于500k的音乐</string>
    <string name="scan_dir">扫描文件夹</string>
    <string name="scan">扫描</string>
    <string name="sure">确定</string>
    <string name="weixin">微信好友</string>
    <string name="weixin_pengyouquan">微信朋友圈</string>
    <string name="qq">qq</string>
    <string name="qq_zone">qq空间</string>
    <string name="more">更多</string>
    <string name="play_list">播放列表</string>
    <string name="hour">小时</string>
    <string name="min">分钟</string>
    <string name="back_to_top">已回到顶部</string>
    <string name="scroll_to_curr_pos">已定位到当前播放歌曲</string>
    <string name="scan_success">扫描成功</string>
    <string name="no_match_result">没有匹配结果</string>
    <string name="history">历史</string>
    <string name="clear_all">清除全部</string>
    <string name="timer_set_success">设置成功</string>
    <string name="timer_close_after_mins">分钟后将自动关闭</string>
    <string name="delete_music">删除</string>
</resources>
