<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_10"
    android:background="@drawable/bg_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer_time_customer"
        android:textSize="@dimen/most_big_text_size"
        android:textColor="@color/timer_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <NumberPicker
            android:id="@+id/customer_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <NumberPicker
            android:id="@+id/customer_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_text_view_height"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel"/>
        <View
            android:layout_width="@dimen/dialog_view_width"
            android:layout_height="@dimen/dialog_view_height"
            android:layout_gravity="center"
            android:background="@color/gray_default"/>
        <TextView
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_text_view_height"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:text="@string/sure"/>
    </LinearLayout>
</LinearLayout>
