<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer_title"
        android:textSize="20sp"
        android:textColor="@color/timer_color"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/timer_dialog_item_height"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:id="@+id/timer_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/timer_no"
            android:textColor="@color/timer_color"
            android:textSize="@dimen/timer_dialog_item_text_size" />
        <RadioButton
            android:id="@+id/radio_btn_timer_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
        <!--<ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_ok"/>-->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/timer_dialog_item_height"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:id="@+id/timer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/timer_time_1"
            android:textColor="@color/timer_color"
            android:textSize="@dimen/timer_dialog_item_text_size" />
        <RadioButton
            android:id="@+id/radio_btn_timer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/timer_dialog_item_height"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:id="@+id/timer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_time_2"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/timer_dialog_item_text_size"
            android:layout_centerVertical="true"
            android:textColor="@color/timer_color"/>
        <RadioButton
            android:id="@+id/radio_btn_timer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/timer_dialog_item_height"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:id="@+id/timer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_time_3"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/timer_dialog_item_text_size"
            android:textColor="@color/timer_color"/>
        <RadioButton
            android:id="@+id/radio_btn_timer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/timer_dialog_item_height"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:id="@+id/timer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_time_4"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/timer_dialog_item_text_size"
            android:textColor="@color/timer_color"/>
        <RadioButton
            android:id="@+id/radio_btn_timer_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/timer_dialog_item_height"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:id="@+id/timer_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_time_5"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/timer_dialog_item_text_size"
            android:textColor="@color/timer_color"/>
        <RadioButton
            android:id="@+id/radio_btn_timer_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/timer_dialog_item_height"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:id="@+id/timer_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_time_customer"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/timer_dialog_item_text_size"
            android:textColor="@color/timer_color"/>
        <RadioButton
            android:id="@+id/radio_btn_timer_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/timer_play_until_finish"
            android:layout_centerVertical="true"
            android:textColor="@color/timer_color"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel"/>
        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/gray_default"/>
        <TextView
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:text="确定"/>
    </LinearLayout>
</LinearLayout>
