<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:paddingTop="@dimen/padding_dialog"
    android:paddingLeft="@dimen/padding_dialog"
    android:paddingRight="@dimen/padding_dialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/middle_text_size"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_dialog"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/delete_from_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/delete_from_device_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_from_device"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_text_view_height"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/dialog_delete_text_color"
            android:text="@string/cancel"/>
        <View
            android:layout_width="@dimen/dialog_view_width"
            android:layout_height="@dimen/dialog_view_height"
            android:layout_gravity="center"
            android:background="@color/gray_default"/>
        <TextView
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_text_view_height"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/dialog_delete_text_color"
            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>
