<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_share"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/weixin"
            android:layout_width="@dimen/share_dialog_layout_height"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/share_dialog_item_height"
                android:layout_height="@dimen/share_dialog_item_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_weixin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/weixin"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weixin_pengyouquan"
            android:layout_width="@dimen/share_dialog_layout_height"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/share_dialog_item_height"
                android:layout_height="@dimen/share_dialog_item_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_weixin_pengyouquan"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/weixin_pengyouquan"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/qq"
            android:layout_width="@dimen/share_dialog_layout_height"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/share_dialog_item_height"
                android:layout_height="@dimen/share_dialog_item_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_qq"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/qq"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/qq_zone"
            android:layout_width="@dimen/share_dialog_layout_height"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/share_dialog_item_height"
                android:layout_height="@dimen/share_dialog_item_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_qq_zone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/qq_zone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more"
            android:layout_width="@dimen/share_dialog_layout_height"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/share_dialog_item_height"
                android:layout_height="@dimen/share_dialog_item_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_share_more"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/more"/>
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>

